--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navbar Starts here -->
     <nav class="bg-red-500 p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-white font-bold text-lg">Travel Karo</a>
+            <a href="update.html" class="text-white font-bold text-lg">Travel Karo</a>
 
             <!-- Mobile Menu Button (hidden on large screens) -->
             <div class="block lg:hidden">
